--- a/Ejercicios/Ejercicio SOAP/AlumnoMovil/app/src/main/res/drawable/side_nav_bar.xml
+++ b/Ejercicios/Ejercicio SOAP/AlumnoMovil/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:centerColor="#00265F"
+        android:endColor="#00113D"
+        android:startColor="#384679"
         android:type="linear" />
 </shape>
