--- a/Ejercicios/Ejercicio SOAP/AlumnoMovil/app/src/main/res/menu/activity_alumno_navigation_drawer.xml
+++ b/Ejercicios/Ejercicio SOAP/AlumnoMovil/app/src/main/res/menu/activity_alumno_navigation_drawer.xml
@@ -5,21 +5,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_list"
             android:icon="@drawable/ic_menu_list"
             android:title="@string/menu_list" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_insert"
             android:icon="@drawable/ic_menu_insert"
             android:title="@string/menu_insert" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_delete"
+            android:icon="@drawable/ic_menu_delete"
+            android:title="@string/menu_delete" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="@string/menu_update" />
     </group>
 
     <item android:title="Communicate">
